svm_helper.py: modify for new version of sklear and Python

--- a/Intro_Classical_ML.ipynb
+++ b/Intro_Classical_ML.ipynb
@@ -380,7 +380,7 @@
     "\n",
     "- A **predictor** is a map from $\\x$ to a class (label) $\\hat{\\y}$.\n",
     "\n",
-    "The previously unseen image: $\\x$ consists of $n=64$ pixels (arranged as an $8 \\times 8$ grid.\n",
+    "The previously unseen image: $\\x$ consists of $n=64$ pixels (arranged as an $8 \\times 8$ grid).\n",
     "\n",
     "$\\hat{\\y}$ is the digit that we will say the image represents."
    ]
