--- a/Linear_Regression_HigherOrderFeatures.ipynb
+++ b/Linear_Regression_HigherOrderFeatures.ipynb
@@ -410,7 +410,7 @@
    },
    "source": [
     "In other words, we are performing feature iteration\n",
-    "- in this case: adding the missing feature $x^2$"
+    "- in this case: adding the missing feature $\\x^2$"
    ]
   },
   {
