--- a/Recipe_for_ML.ipynb
+++ b/Recipe_for_ML.ipynb
@@ -604,7 +604,7 @@
    },
    "source": [
     "A common, unwanted surprise sometimes becomes apparent on the first look\n",
-    "- examples are often given in a non-random order, e.g., sorted by target\n",
+    "- examples are often given in a **non-random order**, e.g., sorted by target\n",
     "\n",
     "This can be a problem\n",
     "- the split into train/test datasets will not be from the same distribution\n",
@@ -626,7 +626,7 @@
     "\n",
     "- We have named the features `X_lin` and targets  `y_lin`, rather than generic `X,y`\n",
     "- You will probably come to regret calling variables with generic names like ` X, y`.\n",
-    "- You often find yourself modifying these values.  If you try to re-run a previous self after having modified `X and y`, you will get <b>different</b> results which you will find confusing.    \n",
+    "- You often find yourself modifying these values.  If you try to re-run a previous cell after having modified `X and y`, you will get <b>different</b> results which you will find confusing.    \n",
     "</div>  "
    ]
   },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -810,7 +810,7 @@
     "\n",
     "$$\\textrm{RMSE}(\\y, \\hat{\\y}) = \\sqrt{ { 1\\over{m}} \\times \\sum_{i=1}^m { ( \\y^\\ip - \\hat{\\y}^\\ip)^2} }$$\n",
     "\n",
-    "Our goal is to minimize the RMSE by making each prediction $\\hat{y}^\\ip$ close to the true value $y^\\ip$.\n",
+    "Our goal is to minimize the RMSE by making each prediction $\\hat{\\y}^\\ip$ close to the true value $y^\\ip$.\n",
     "\n",
     "n.b., we will sometimes ignore the square root\n",
     "$$\\textrm{MSE}(\\y, \\hat{\\y}) = \\text{RMSE}(\\y, \\hat{\\y})^2$$"
@@ -1363,7 +1363,7 @@
     }
    },
    "source": [
-    "## Recipe D.1:Select a model\n",
+    "## Recipe D.1: Select a model\n",
     "\n",
     " We form an hypothesis that relates features to targets.  \n",
     " \n",
@@ -1553,7 +1553,9 @@
     }
    ],
    "source": [
-    "# Recall: one way to turn a 1D ndarray into 2D is using reshape\n",
+    "# Recall: \n",
+    "# The features are a vector.  We have only a single feature but we must turn it into a vector of length 1.\n",
+    "# One way to turn a 1D ndarray into 2D is using reshape\n",
     "np.array([100]).reshape(-1,1)"
    ]
   },
@@ -2243,9 +2245,7 @@
     "- In Machine Learning, the Performance Metric is evaluated out of sample\n",
     "- In Statistics, we often evaluate this measure in sample\n",
     "\n",
-    "Is Statistics just Machine Learning where the Test and Training sets are the same ?\n",
-    "\n",
-    "Let's look at how well we did in sample"
+    "Is Statistics just Machine Learning where the Test and Training sets are the same ?\n"
    ]
   },
   {
