Typo in name of git repo: it is ML_Fall_2021 not Fall_2021

--- a/Setup_ML_Environment_NYU.ipynb
+++ b/Setup_ML_Environment_NYU.ipynb
@@ -203,7 +203,7 @@
     "conda install -y git\n",
     "\n",
     "# Clone git repositories\n",
-    "REPO=\"Fall_2021\"\n",
+    "REPO=\"ML_Fall_2021\"\n",
     "\n",
     "git clone https://github.com/kenperry-public/$REPO.git\n",
     "git clone https://github.com/jakevdp/PythonDataScienceHandbook.git\n",
