Typo in slide verifying name of directory of git repo: it is ML_Fall_2021 not ML_Spring_2021

--- a/Setup_ML_Environment_NYU.ipynb
+++ b/Setup_ML_Environment_NYU.ipynb
@@ -219,7 +219,7 @@
    },
    "source": [
     "You should verify that your notebooks directory has the following subdirectories\n",
-    "- `ML_Spring_2021`\n",
+    "- `ML_Fall_2021`\n",
     "    - The course material\n",
     "    - This is where you will find the lectures\n",
     "- `handson-ml`\n",
