Assignment 1; rearrange Index.ipynb to reflect material actually covered in Week 2 classroom

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -70,9 +70,16 @@
     "        - Quick first pass, followed by Deeper Dives\n",
     "    - This will be a code-heavy notebook !\n",
     "    - Illustrate Pandas, Jupyter, etc\n",
-    "    - [Recipe for Machine Learning: Overview](Recipe_Overview.ipynb)\n",
-    "        - [Linked notebook](Recipe_for_ML.ipynb)\n",
+    "    \n",
+    "**The Recipe for Machine Learning, illustrated with the Linear Regression model**  \n",
+    "- [Recipe for Machine Learning: Overview](Recipe_Overview.ipynb)\n",
+    "    - [Linked notebook](Recipe_for_ML.ipynb)\n",
     "\n",
+    "- [Linear Regression: Loss Function](Linear_Regression_Loss_Function.ipynb)\n",
+    "\n",
+    "**Transformations**\n",
+    " - [Prepare Data: Intro to Transformations](Prepare_data_Overview.ipynb)\n",
+    " \n",
     "**Deeper dives**\n",
     "- Iterative improvement\n",
     "    - [When to stop: Bias and Variance](Bias_and_Variance.ipynb)\n",
@@ -91,26 +98,13 @@
     "# Week 3\n",
     "\n",
     "**Plan**\n",
-    "- Regression wrap up\n",
-    "    - The Loss function for Linear Regression\n",
-    "\n",
-    "- Recipe for ML focus: Introduction to Transformations (Prepare Data step)\n",
-    "    - Transforming data (featuring engineering) is a key step in the Recipe\n",
-    "    - We introduce transformations\n",
-    "        - Focus on the *how*; subsequent lecture will cover the *why*\n",
-    "\n",
     "- Introduce a model for the Classification task: Logistic Regression\n",
     "- How to deal with Categorical (non-numeric) variables\n",
     "    - classification target\n",
     "    - features\n",
     "\n",
     "\n",
-    "**Regression wrap up**\n",
-    " - [Linear Regression: Loss Function](Linear_Regression_Loss_Function.ipynb)\n",
-    " \n",
-    "**Transformations**\n",
-    " - [Prepare Data: Intro to Transformations](Prepare_data_Overview.ipynb)\n",
-    " \n",
+    "\n",
     " \n",
     "**Classification intro**\n",
     "- [Classification: Overview](Classification_Overview.ipynb)\n",
@@ -137,6 +131,27 @@
     "\n",
     "Your assignments should follow the [Assignment Guidelines](assignments/Assignment_Guidelines.ipynb)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Regression\n",
+    "- Assignment notebook: [Using Machine Learning for Hedging](assignments/Regression%20task/Using_Machine_Learning_for_Hedging.ipynb)\n",
+    "- Data\n",
+    "    - There is an archive file containing the data\n",
+    "    - You can find it\n",
+    "        - Under the course page: Content --> Data --> Assignments --> Regression task\n",
+    "        - You won't be able to view the file in the browser, but you **will** be able to Download it\n",
+    "    - You should unzip this archive into the *the same directory* as the assignment notebook\n",
+    "    - The end result is that the directory should contain\n",
+    "        - The assignment notebook and a helper file\n",
+    "        - A directory named `Data`\n"
    ]
   }
  ],
