--- a/Classification_Loss_Function.ipynb
+++ b/Classification_Loss_Function.ipynb
@@ -211,7 +211,7 @@
     "The prediction for example $i$ changes only when probability $\\hat{p}^\\ip$ crosses the threshold.\n",
     "\n",
     "Suppose the class for example $i$ is Positive: $\\y^\\ip = \\text{Positive}$.\n",
-    "- Is our model \"better\" when \n",
+    "- Is our model \"better\" when our prediction is \"more certain\" (extreme probability)\n",
     "$$\n",
     "\\begin{array}[lll]\\\\\n",
     "\\hat{p}^\\ip &  \\approx 1 & \\text{ than when  }       &\\hat{p}^\\ip  = 0.5\\\\\n",
