--- a/Classification_Notebook_Overview.ipynb
+++ b/Classification_Notebook_Overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -124,13 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# My standard magic !  You will see this in almost all my notebooks.\n",
     "\n",
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -459,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
