--- a/Classification_Overview.ipynb
+++ b/Classification_Overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -115,6 +115,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -124,13 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# My standard magic !  You will see this in almost all my notebooks.\n",
     "\n",
@@ -146,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -197,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -239,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -272,11 +290,22 @@
     }
    },
    "source": [
+    "We compute a *linear function* of $\\x$ called the \"score\" (i.e., $\\Theta^T \\x$) and fit the sigmoid to the score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "So fitting the sigmoid function to the data might be a reasonable solution to the Binary Classification Task.\n",
     "\n",
     "It turns out that we can adapt the Linear Regression model to this end.\n",
     "\n",
-    "Let's explore this idea further."
+    "Let's explore this idea further"
    ]
   },
   {
@@ -294,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -367,14 +396,16 @@
    },
    "source": [
     "If the score has the form of a Linear Regression\n",
-    "$$s(\\x) = \\Theta^T \\x\n",
     "$$\n",
-    "then  we get something like this\n"
+    "s(\\x) = \\Theta^T \\x\n",
+    "$$\n",
+    "\n",
+    "then we can plot the surface (line in two dimensions) where the value of the score is equal to a constant (e.g., 0).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -512,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -595,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -633,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -818,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
