--- a/Classification_and_Non_Numerical_Data.ipynb
+++ b/Classification_and_Non_Numerical_Data.ipynb
@@ -1665,11 +1665,24 @@
     "\n",
     "- An example with feature value $2 * \\x_j$ has twice the impact of an example with feature value $\\x_j$.\n",
     "\n",
-    "But is this really true ? Does even a small increment in Age (e.g, from 25 to 26 years) matter ?\n",
-    "\n",
+    "But is this really true ? Does even a small increment in Age (e.g, from 25 to 26 years) matter ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "We might be able to improve things using a \"bucket\" transformation:\n",
-    "- All Ages within a range (bucket) are given the same value\n",
-    "- Model will try to make distinctions *across* buckets, but not *within* a bucket."
+    "- All Ages within a range (bucket)are equally important\n",
+    "    - Convert continuous Age into a non-numeric \"Age Bucket\" (\"Age Bucket\" as a categorical)\n",
+    "    - OR: convert all ages within a bucket to the same value (\"Age Bucket\" as an ordinal)\n",
+    "- Model will try to make distinctions *across* buckets, but not *within* a bucket.\n",
+    "\n",
+    "We will create Age Bucket as an ordinal (there *is* a relationship between buckets based on magnitude)"
    ]
   },
   {
@@ -1774,6 +1787,27 @@
     "(And it doesn't pay to be old when disaster strikes!)\n",
     "\n",
     "We would be hard pressed to see this using Age as a continuous variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Aside**\n",
+    "\n",
+    "It would have been **far better** if we had implemented this \"Age Bucket\" transformation as part of a Pipeline  with all other transformations !\n",
+    "\n",
+    "By not doing so, we risk making the mistake of not applying the bucketing consistently to the in-sample and out of sample examples.\n",
+    "\n",
+    "- In the remainder of this lecture: we will not use Age Bucket.\n",
+    "\n",
+    "- It might be instructive to learn how to implement custom transformations on your own, and use this as an example.  \n",
+    "\n",
+    "- Try including your custom transformation as part of the pipeline for an improved Titanic model."
    ]
   },
   {
@@ -2897,7 +2931,7 @@
     "cat_transformers= Pipeline(steps=[  ('imputer', SimpleImputer(strategy=\"most_frequent\")),\n",
     "                                    ('cat_encoder', OneHotEncoder(sparse=False))\n",
     "                                 ] )\n",
-    "cat_pipeline = ColumnTransformer( transformers=[ (\"ca tegorical\", cat_transformers, cat_features) ] )\n",
+    "cat_pipeline = ColumnTransformer( transformers=[ (\"categorical\", cat_transformers, cat_features) ] )\n",
     "\n",
     "preprocess_pipeline = ColumnTransformer(\n",
     "    transformers=[ (\"numeric\", num_transformers, num_features),\n",
@@ -3390,7 +3424,7 @@
     "width": "368px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
