--- a/Index.ipynb
+++ b/Index.ipynb
@@ -97,15 +97,14 @@
    "source": [
     "# Week 3\n",
     "\n",
+    "**Clarification from last week:** [Cross-validation without cheating](http://localhost:8888/notebooks/NYU/Prepare_data_Overview.ipynb#Using-pipelines-to-avoid-cheating-in-cross-validation)\n",
+    "\n",
     "**Plan**\n",
     "- Introduce a model for the Classification task: Logistic Regression\n",
     "- How to deal with Categorical (non-numeric) variables\n",
     "    - classification target\n",
     "    - features\n",
     "\n",
-    "\n",
-    "\n",
-    " \n",
     "**Classification intro**\n",
     "- [Classification: Overview](Classification_Overview.ipynb)\n",
     "- [Classification and Categorical Variables](Classification_Notebook_Overview.ipynb)\n",
@@ -117,6 +116,62 @@
     "\n",
     "**Deeper dives**\n",
     "- [Log odds](Classification_Log_Odds.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 4\n",
+    "\n",
+    "Good news\n",
+    "- You now know two main tasks in Supervised Learning\n",
+    "    - Regression, Classification\n",
+    "- You now know how to use virtually every model in `sklearn`\n",
+    "    - Consistent API\n",
+    "        - `fit`, `transform`, `predict`\n",
+    "- You survived the \"sprint\" to get you up and running with ML\n",
+    "- You know the *mechanical process* to implement transformations: Pipelines\n",
+    "    \n",
+    "**Plan**\n",
+    "- Classsification and Categorical variables wrapup\n",
+    "    - Baseline models: a baseline model for classification\n",
+    "    - OHE and Linear Regression: The Dummy Variable Trap\n",
+    "- Error Analysis\n",
+    "    - We explain Error Analysis for the Classification Task, with a detailed example\n",
+    "    - How Training Loss can be improved\n",
+    "- Transformations, continued\n",
+    "    - One of the most important parts of the Recipe: transforming raw data into something that tells a story\n",
+    "- Loss functions\n",
+    "    - We look at the mathematical logic behind loss functions\n",
+    "\n",
+    "\n",
+    "**Classsification and Categorical variables wrapup**\n",
+    "- [Dummy variable trap](Dummy_Variable_Trap.ipynb)\n",
+    "- [Baseline model for Classification](Classification_Baseline_Model.ipynb)\n",
+    "\n",
+    "\n",
+    "**Error Analysis**\n",
+    "- [Error Analysis](Error_Analysis_Overview.ipynb)\n",
+    "    - [linked notebook](Error_Analysis.ipynb)\n",
+    "        - Summary statistics\n",
+    "        - Conditional statistics\n",
+    "    - [Worked example](Error_Analysis_MNIST.ipynb)\n",
+    "\n",
+    "- [Loss Analysis: Using training loss to improve models](Training_Loss.ipynb)\n",
+    " \n",
+    "**Transformations, continued**\n",
+    "- [Transformations Overview](Transformations_Overview.ipynb)\n",
+    "\n",
+    "**Loss function**\n",
+    "- [Loss functions: the math](Loss_functions.ipynb)\n",
+    "    - Maximum likelihood\n",
+    "    - Preview: custom loss functions and Deep Learning\n",
+    "   "
    ]
   },
   {
