--- a/Prepare_data_Overview.ipynb
+++ b/Prepare_data_Overview.ipynb
@@ -625,6 +625,70 @@
     }
    },
    "source": [
+    "## Pipelines in `sklearn`\n",
+    "\n",
+    "We will see a real use case for Pipelines in a subsequent lecture.\n",
+    "\n",
+    "For now, we only give a preview to illustrate the highlights."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Transformations in `sklearn` respond to the methods `fit` and `transform`\n",
+    "\n",
+    "`sklearn` provides a `Pipeline` object\n",
+    "- a container for a list of objects that respond to `fit` and `transform` (e.g., Transformations)\n",
+    "- applying `fit` (resp., `transform`) to a `Pipeline` object will apply the method to each element of the list, in sequence\n",
+    "\n",
+    "So the `Pipeline` object in `sklearn` is a convenient way of bundling multiple transformations.\n",
+    "\n",
+    "This will make it easier to apply the entire set of transformations consistently (to in-sample and out of sample examples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "You may also recall that models in `sklearn` also respond to methods `fit` and `transform`.\n",
+    "\n",
+    "We will see that you can also place a model object in a `Pipeline` (usually as the last element of the list).\n",
+    "\n",
+    "One benefit of doing so is that the entire process of (transformations + modeling) is neatly wrapped into a single object (promoting consistency).\n",
+    "\n",
+    "But we will also see that it facilitates the avoidance of the subtle problem of \"cheating in cross validation\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Let's explore [Transformation pipelines in `sklearn`](Transformations_Pipelines.ipynb)\n",
+    "\n",
+    "We will see this in action within the notebook for Classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "# Using pipelines to avoid cheating in cross validation\n",
     "\n",
     "Although we start off with the best intentions, it is easy to accidentally \"cheat\" \n",
@@ -719,16 +783,84 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "Perhaps the increase in effort is one reason this subtle cheating is overlooked.\n",
+    "Perhaps the cheating will become more apparent if we look at some code.\n",
     "\n",
-    "Fortunately, a good toolkit for ML (e.g.,`sklearn`) can facilitate proper transformation fitting without extra effort.\n",
+    "Here is code that \"cheats\" by fitting the transformation to **all** folds"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Transform the data\n",
+    "X_train = preprocess_pipeline.fit_transform(train_data)\n",
     "\n",
-    "Let's explore [Transformation pipelines in `sklearn`](Transformations_Pipelines.ipynb)\n",
+    "# Cross validation\n",
+    "scores = cross_val_score(clf, X_train, y_train, cv=10)\n",
+    "print(\"Model: {m:s} avg cross val score={s:3.2f}\\n\".format(m=name, s=scores.mean()) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "And here is code that does not cheat: the transformation is fit **only** to the folds that are in-sample during cross validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Combine the transformation pipeline with a final classification step\n",
+    "model_pipeline = Pipeline(steps=[ (\"transform\", preprocess_pipeline),\n",
+    "                                  (\"classify\", clf)\n",
+    "                                ]\n",
+    "                         )\n",
     "\n",
-    "We will see this in action within the notebook for Classification.\n",
-    "\n"
+    "# Cross validation on the combined pipeline\n",
+    "scores = cross_val_score(model_pipeline, train_data, y_train, cv=10)\n",
+    "print(\"Model: {m:s} avg cross val score={s:3.2f}\\n\".format(m=name, s=scores.mean()) )\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "`cross_val_score`\n",
+    "- Divides `train_data` into folds\n",
+    "- For each fold $f$\n",
+    "    - Splits `train_data` into\n",
+    "        - set of folds $F$ **excluding** $f$\n",
+    "        - uses $f$ as out of sample\n",
+    "    - Applies the first argument (e.g., `model_pipeline` rather than the model object `clf`) to $F$\n",
+    "    - Resulting in the `preprocess_pipeline` and model object being applied to all folds **except** $f$\n",
+    "- The result is that there is one score (Performance metric) computed for each fold (when that fold is out of sample)\n",
+    "    "
    ]
   },
   {
@@ -788,7 +920,7 @@
     "width": "370.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
