--- a/Index.ipynb
+++ b/Index.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "# Week 3\n",
     "\n",
-    "**Clarification from last week:** [Cross-validation without cheating](http://localhost:8888/notebooks/NYU/Prepare_data_Overview.ipynb#Using-pipelines-to-avoid-cheating-in-cross-validation)\n",
+    "**Clarification from last week:** [Cross-validation without cheating](Prepare_data_Overview.ipynb#Using-pipelines-to-avoid-cheating-in-cross-validation)\n",
     "\n",
     "**Plan**\n",
     "- Introduce a model for the Classification task: Logistic Regression\n",
@@ -227,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
