Use TitanicHelper (from dthelper) in the Classification lesson notebooks; set the helper to access the local directory 'data'

--- a/Classification_and_Non_Numerical_Data.ipynb
+++ b/Classification_and_Non_Numerical_Data.ipynb
@@ -174,6 +174,11 @@
     "# Common imports\n",
     "import os\n",
     "\n",
+    "import decision_trees_helper as dthelp\n",
+    "%aimport decision_trees_helper\n",
+    "\n",
+    "th = dthelp.TitanicHelper()\n",
+    "\n",
     "import mnist_helper\n",
     "%aimport mnist_helper\n",
     "\n",
@@ -188,6 +193,9 @@
     "%aimport training_models_helper\n",
     "\n",
     "tm = tmh.TrainingModelsHelper()\n",
+    "\n",
+    "import decision_trees_helper as dthelp\n",
+    "%aimport decision_trees_helper\n",
     "\n",
     "num_head=5"
    ]
@@ -306,10 +314,19 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data directory:  ./data/titanic\n"
+     ]
+    }
+   ],
    "source": [
     "# Note the use of *relative path*; you should all use relative rather than absolute paths\n",
-    "TITANIC_PATH = os.path.join(\"./external/jack-dies\", \"data\")\n",
+    "TITANIC_PATH = th.TITANIC_PATH\n",
+    "print(\"Data directory: \", TITANIC_PATH)\n",
     "\n",
     "train_data = pd.read_csv( os.path.join(TITANIC_PATH, \"train.csv\") )\n",
     "test_data  = pd.read_csv( os.path.join(TITANIC_PATH, \"test.csv\")  )\n"
