--- a/Dummy_Variable_Trap.ipynb
+++ b/Dummy_Variable_Trap.ipynb
@@ -439,11 +439,11 @@
     "    - Captures the \"base\" contribution (e.g. $\\Theta_{\\mathbf{Is}_\\text{Male}}$) of the missing category\n",
     "\n",
     "- The remaining binary variables\n",
-    "    - Capture the incremental contribution (over the base contribution $\\Theta_{\\mathbf{Is}_\\text{Male}}$)\n",
+    "    - Capture the *incremental* contribution (over the base contribution $\\Theta_{\\mathbf{Is}_\\text{Male}}$)\n",
     "    of the example being different than the base category (e.g., having  `Sex` = $\\text{Male}$)\n",
     "\n",
     "That is:\n",
-    "- $\\Theta_{\\mathbf{Is}_\\text{Female}}$: absolute contribution to $\\hat{\\y}$ for being Female rather than Male\n",
+    "- $\\Theta_{\\mathbf{Is}_\\text{Female}}$: *absolute* contribution to $\\hat{\\y}$ for being Female rather than Male\n",
     "- $\\Theta'_{\\mathbf{Is}_\\text{Female}}$: *incremental* contribution to $\\hat{\\y}$ for being Female\n",
     "    - Over and above the contribution for being Male"
    ]
