--- a/Error_Analysis_Overview.ipynb
+++ b/Error_Analysis_Overview.ipynb
@@ -21,6 +21,7 @@
        "\\newcommand{\\e}{\\mathbf{e}}\n",
        "\\newcommand{\\z}{\\mathbf{z}}\n",
        "\\newcommand{\\h}{\\mathbf{h}}\n",
+       "\\newcommand{\\u}{\\mathbf{u}}\n",
        "\\newcommand{\\v}{\\mathbf{v}}\n",
        "\\newcommand{\\w}{\\mathbf{w}}\n",
        "\\newcommand{\\W}{\\mathbf{W}}\n",
@@ -41,10 +42,35 @@
        "%\n",
        "\\newcommand{Thetam}{\\Theta_{-0}}\n",
        "\n",
+       "% CNN\n",
+       "\\newcommand{\\kernel}{\\mathbf{k}} \n",
+       "\\newcommand{\\dim}{d}\n",
+       "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
+       "\\newcommand{\\summaxact}{\\text{max}}\n",
        "%\n",
+       "%\n",
+       "\n",
+       "% RNN\n",
        "% \\tt indexes a time step\n",
        "\\newcommand{\\tt}{t}\n",
        "\\newcommand{\\tp}{{(\\tt)}}\n",
+       "%\n",
+       "%\n",
+       "\n",
+       "% LSTM\n",
+       "\\newcommand{\\g}{\\mathbf{g}}\n",
+       "\\newcommand{\\remember}{\\mathbf{remember}}\n",
+       "\\newcommand{\\save}{\\mathbf{save}}\n",
+       "\\newcommand{\\focus}{\\mathbf{focus}}\n",
+       "%\n",
+       "%\n",
+       "% NLP\n",
+       "\\newcommand{\\Vocab}{\\mathbf{V}}\n",
+       "\\newcommand{\\v}{\\mathbf{v}}\n",
+       "\\newcommand{\\offset}{o}\n",
+       "\\newcommand{\\o}{o}\n",
+       "\\newcommand{\\E}{\\mathbf{E}}\n",
+       "%\n",
        "%\n",
        "\\newcommand{\\loss}{\\mathcal{L}}\n",
        "\\newcommand{\\cost}{\\mathcal{L}}\n",
@@ -72,13 +98,15 @@
        "\\def\\min#1{\\underset{#1} {\\operatorname{min}} }\n",
        "%\n",
        "\\def\\pr#1{\\mathcal{p}(#1)}\n",
+       "\\def\\prc#1#2{\\mathcal{p}(#1 \\; | \\; #2)}\n",
        "\\def\\cnt#1{\\mathcal{count}_{#1}}\n",
        "\\def\\node#1{\\mathbb{#1}}\n",
        "%\n",
        "\\newcommand{\\floor}[1]{\\left\\lfloor #1 \\right\\rfloor}\n",
        "\\newcommand{\\ceil}[1]{\\left\\lceil #1 \\right\\rceil}\n",
        "%\n",
-       "\n",
+       "\\def\\loc#1{{\\text{##} {#1}}}\n",
+       "%\n",
        "$$\n"
       ],
       "text/plain": [
@@ -316,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
