--- a/assignments/Regression task/Using_Machine_Learning_for_Hedging.ipynb
+++ b/assignments/Regression task/Using_Machine_Learning_for_Hedging.ipynb
@@ -300,6 +300,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Expected outputs should be similar to this:   \n",
+    "<img src=\"./images/data.png\" width=\"300\" height=\"200\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create DataFrame of price levels for the training examples\n",
     "\n",
     "The training examples will be stored in a DataFrame.\n",
@@ -646,6 +654,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "  \n",
+    "Expected outputs should be similar to this:   \n",
+    "<img src=\"./images/train_data.png\" width=\"250\" height=\"150\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Remove the target \n",
     "\n",
     "The only feature is the return of the market proxy $\\spy$.\n",
@@ -761,6 +778,20 @@
     "print(\"X test length\", X_test.shape[0])\n",
     "print(\"y test length\", y_test.shape[0])\n",
     "test_data_ret.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Expected outputs should be similar to this:   \n",
+    "\n",
+    "test data length 63      \n",
+    "X test length 63      \n",
+    "y test length 63        \n",
+    "\n",
+    "<img src=\"./images/test_data.png\" width=\"250\" height=\"150\"/>\n",
+    "\n"
    ]
   },
   {
